[gd_scene load_steps=43 format=2]

[ext_resource path="res://Enemies/Crawler.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/Sprite/Creepy_spider_eye-Sheet.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Sprite/Creepy_spider_eye.png" type="Texture" id=3]
[ext_resource path="res://Enemies/Sprite/Speyeder_Eye.png" type="Texture" id=4]
[ext_resource path="res://Enemies/Speyeder.gd" type="Script" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 96, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 144, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 48, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 96, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 144, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 0, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 48, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 96, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 144, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 0, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 48, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 96, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 144, 144, 48, 48 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "shooting",
"speed": 8.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "fire",
"speed": 14.0
} ]

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 48, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 2 )
region = Rect2( 96, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 2 )
region = Rect2( 144, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 2 )
region = Rect2( 48, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=36]
animations = [ {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": false,
"name": "close",
"speed": 8.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": false,
"name": "open",
"speed": 9.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": true,
"name": "walk",
"speed": 6.0
}, {
"frames": [ SubResource( 35 ) ],
"loop": true,
"name": "die",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=37]
radius = 11.395

[node name="Crawler" instance=ExtResource( 1 )]
script = ExtResource( 5 )

[node name="EyeSprite" type="AnimatedSprite" parent="." index="0"]
frames = SubResource( 20 )
animation = "shooting"
frame = 1
playing = true

[node name="RayCast2D" type="RayCast2D" parent="EyeSprite" index="0"]
cast_to = Vector2( 0, -256 )

[node name="AnimatedSprite" parent="." index="1"]
frames = SubResource( 36 )
animation = "open"
frame = 2

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2( 0, 2.992 )
shape = SubResource( 37 )

[node name="CollisionShape2D" parent="gap_detector_left" index="0"]
position = Vector2( -14.4585, 20.7332 )

[node name="CollisionShape2D2" parent="gap_detector_right" index="0"]
position = Vector2( 14.0832, 19.7794 )

[node name="WalkTimer" type="Timer" parent="." index="5"]
wait_time = 5.0
one_shot = true
autostart = true

[node name="ShootTimer" type="Timer" parent="." index="6"]

[node name="Area2D" type="Area2D" parent="." index="7"]
collision_mask = 2147483649

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D" index="0"]
polygon = PoolVector2Array( 0, 0, -256, -256, 256, -256 )
[connection signal="timeout" from="WalkTimer" to="." method="_on_WalkTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
